<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:padding="24dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_title"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_subtitle"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvAppName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <ImageView
        android:id="@+id/ivWeatherIcon1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/clima1"
        android:contentDescription="@string/weather_icon_1"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ivWeatherIcon2"
        android:layout_marginTop="40dp" />

    <ImageView
        android:id="@+id/ivWeatherIcon2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/clima2"
        android:contentDescription="@string/weather_icon_2"
        app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
        app:layout_constraintStart_toEndOf="@id/ivWeatherIcon1"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:text="@string/btn_ingresar"
        android:textSize="18sp"
        android:textStyle="bold"
        android:backgroundTint="@color/purple_500"
        app:layout_constraintBottom_toTopOf="@id/tvElaboradoPor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="60dp" />

    <TextView
        android:id="@+id/tvElaboradoPor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elaborado_por"
        android:textSize="14sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>