<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87CEEB"
    tools:context=".AppActivity">

    <!-- FragmentContainerView para el Navigation Component -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_host_fragment"
        android:name="androidx.navigation.fragment.NavHostFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/navigation_bar"
        app:navGraph="@navigation/nav_graph" />

    <!-- Barra de navegación inferior -->
    <LinearLayout
        android:id="@+id/navigation_bar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#1E3A8A"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnLocations"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/locations"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnPronostico"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pronostico"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnFuturo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/futuro"
            android:textColor="@android:color/white"
            android:background="@android:color/transparent"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>